src/test/ui/suggestions/pub-ident-fn.stderr
error: missing `fn` for method definition
  --> $DIR/pub-ident-fn.rs:11:4
   |
11 | pub   foo(s: usize) -> bool { true }
   |    ^^^
help: add `fn` here to parse `foo` as a public method
   |
11 | pub fn foo(s: usize) -> bool { true }
   |     ^^

error: aborting due to previous error

